--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h3 class="section-title">Media Sosial</h3>
             <div class="content">
                 <div class="media-info">
-                    <li><i class="fab fa-whatsapp"></i>+62 877 3564 8765</li>
+                    <li><i class="fab fa-whatsapp"></i>+62 877 3564 8765O (Mr Ketut)</li>
                     <li><i class="fab fa-instagram"></i><a href="https://www.instagram.com/englishclass_bandem?igsh=MTQxMnI1a3o2cjcxaw==">@englishclass_bandem</a></li>
                     <li><i class="fab fa-facebook"></i>Coming Soon</li>
                     <li><i class="fab fa-youtube"></i>Coming Soon</li>
