--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="media-icons">
-                <a href="#" class="icon"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/6287735648765?text=Halo+Mr.Ketut" class="icon"><i class="fab fa-whatsapp"></i></a>
                 <a href="https://www.instagram.com/englishclass_bandem?igsh=MTQxMnI1a3o2cjcxaw==" class="icon"><i class="fab fa-instagram"></i></a>
                 <a href="#" class="icon"><i class="fab fa-facebook"></i></a>
                 <a href="#" class="icon"><i class="fab fa-youtube"></i></a>
